CSS colors for headers, name, title, technologies on homepage added.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,10 +3,12 @@
 {% block title %}Briana Wuthrich - Software Engineer{% endblock %}
 
 {% block body %}
-<h1>Briana Wuthrich</h1>
-<h2>Full Stack Software Engineer</h2>
-<h4>Python | Flask | JavaScript | HTML | CSS | PostgreSQL | SQL | SQLAlchemy</h4>
+<h1 id="name">Briana Wuthrich</h1>
+<h2 id="job_title">Full Stack Software Engineer</h2>
+<h4 id="technologies">Python | Flask | JavaScript | HTML | CSS | PostgreSQL | SQL | SQLAlchemy</h4>
+<img id="head_shot" src="static/images/head shot.jpg">
 
-
+<h6 id="about_me_title">A Little About Me...</h6>
+<p></p>
 
 {% endblock %}
