--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,12 @@
 
 <html>
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/static/style.css">
     <title>
         {% block title %}{% endblock %}
     </title>
