Homepage name, image, title, tech stack completed.

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Hepta+Slab&family=Slabo+13px&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="/static/style.css">
     <title>
         {% block title %}{% endblock %}
