--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,16 @@
 body {
-    background-image: linear-gradient(to right, #3f4ea39d, #157e65f0);
+    background-image: linear-gradient(to right, #36459cbe, #157e65f0);
+}
+
+#name_title_header {
+    text-align: center;
 }
 
 #name {
     color: white;
-    font-size: 150px;
-    margin-top: 200px;
+    font-size: 175px;
+    margin-top: 50px;
+    margin-bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,7 +20,8 @@ body {
 
 #job_title {
     color: white;
-    font-size: 45px;
+    font-size: 40px;
+    font-family: 'Hepta Slab', serif;
     margin-top: 10px;
     display: flex;
     align-items: center;
@@ -24,20 +30,19 @@ body {
 
 #technologies {
     color: white;
-    font-size: 25px;
-    margin-top: 10px;
+    font-size: 21px;
+    font-family: 'Hepta Slab', serif;
+    margin-top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 #head_shot {
-    width: 425px;
-    height: 450px;
+    width: 325px;
+    height: 400px;
     border-radius: 50%;
-    border-color: black;
-    border: 20px;
-    overflow: hidden;
+    border: 10px solid rgb(75, 67, 75);
 }
 
 #about_me_title {
