--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,12 +3,18 @@
 {% block title %}Briana Wuthrich - Software Engineer{% endblock %}
 
 {% block body %}
-<h1 id="name">Briana Wuthrich</h1>
-<h2 id="job_title">Full Stack Software Engineer</h2>
-<h4 id="technologies">Python | Flask | JavaScript | HTML | CSS | PostgreSQL | SQL | SQLAlchemy</h4>
-<img id="head_shot" src="static/images/head shot.jpg">
+<div id="name_title_header">
+    <h1 id="name">Briana Wuthrich</h1>
+    <img id="head_shot" src="static/images/frodo photo, portfolio.jpg">
+    <h2 id="job_title">Full Stack Software Engineer</h2>
+    <h4 id="technologies">Python | Flask | JavaScript | PostgreSQL | SQL | SQLAlchemy | HTML | CSS</h4>
+</div>
 
-<h6 id="about_me_title">A Little About Me...</h6>
-<p></p>
+
+
+
+
+<!-- <h6 id="about_me_title">A Little About Me...</h6>
+<p></p> -->
 
 {% endblock %}
