--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,11 +3,13 @@
 {% block title %}Briana Wuthrich - Software Engineer{% endblock %}
 
 {% block body %}
-<div id="name_title_header">
-    <h1 id="name">Briana Wuthrich</h1>
-    <img id="head_shot" src="static/images/frodo photo, portfolio.jpg">
-    <h2 id="job_title">Full Stack Software Engineer</h2>
-    <h4 id="technologies">Python | Flask | JavaScript | PostgreSQL | SQL | SQLAlchemy | HTML | CSS</h4>
+<div class="body">
+    <div id="name_title_header">
+        <h1 id="name">Briana Wuthrich</h1>
+        <img id="head_shot" src="static/images/frodo photo, portfolio.jpg">
+        <h2 id="job_title">Full Stack Software Engineer</h2>
+        <h4 id="technologies">Python | Flask | JavaScript | SQL | PostgreSQL | HTML | CSS</h4>
+    </div>
 </div>
 
 
