projects.html created

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -1,3 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}About Me{% endblock %}
+
+{% block body %}
+<div class="body">
+
+</div>
+{% endblock %}
