--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,31 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
     background-image: linear-gradient(to right, #36459cbe, #157e65f0);
 }
+
 
 .navbar {
     position: fixed;
     width: 100%;
     top: 0;
     text-align: center;
-    margin-left: 38%;
+    font-family: 'Hepta Slab', serif;
+    background: rgb(75, 67, 75);
   }
 
-  .nav-item {
-    font-size: 20px;
+.navbar-nav .nav-item.active .nav-link {
+    color: white;
+}
+ 
+.nav-item {
+    font-size: 16px;
+    color: white;
   }
 
+.navbar-brand {
+    color: white !important;
+}
 
 #name_title_header {
     text-align: center;
@@ -22,7 +34,7 @@ body {
 #name {
     color: white;
     font-size: 175px;
-    margin-top: 75px;
+    margin-top: 100px;
     margin-bottom: 0;
     display: flex;
     align-items: center;
