--- a/templates/base.html
+++ b/templates/base.html
@@ -19,29 +19,32 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light background-image: linear-gradient(to right, #36459cbe, #157e65f0);">
-        <a class="navbar-brand" href="#">Navbar</a>
+
+        <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about_me">About Me</a>
-            </li>
-            <li class="nav-item">
+
+            <li class="nav-item active">
               <a class="nav-link" href="/projects">Projects</a>
             </li>
-            <li class="nav-item">
+
+            <li class="nav-item active">
               <a class="nav-link" href="/contact">Contact</a>
             </li>
+
           </ul>
         </div>
+
       </nav>
 
-    
 
     <title>
         {% block title %}{% endblock %}
