--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,17 @@
 
     <nav class="navbar navbar-expand-lg navbar-light background-image: linear-gradient(to right, #36459cbe, #157e65f0);">
 
-        <a class="navbar-brand" href="/">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container">
+     
 
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="navbar-brand" href="/">Home</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            </li>
 
             <li class="nav-item active">
               <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
@@ -41,6 +45,7 @@
             </li>
 
           </ul>
+        </div>
         </div>
 
       </nav>
