Contact page email, linkedin, github, resume added

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -3,7 +3,41 @@
 {% block title %}About Me{% endblock %}
 
 {% block body %}
-<div class="body">
+<div class="container">
 
+    <div class="row">
+        <div class="col-sm-12 col-md-4 col-lg-3">
+            <img id="about_me_head_shot" src="static/images/frodo photo, portfolio.jpg" alt="Briana's Headshot">
+        </div>
+    
+
+    <div class="col-sm-12 col-md-8 col-lg-9">
+
+        <p id="about_me_intro">Hi, I'm Briana!</p>
+
+        <p class="about_me_text"> I'm a passionate entry-level software engineer currently living in Arizona. Before venturing into the
+            tech world, I spent 13 years in nursing, embracing the chaos and bringing a compassionate
+            touch to healthcare.</p>
+        
+        <p class="about_me_text">Eager to learn and grow, I'm diving headfirst into coding adventures. My background in nursing
+            taught me resilience and adaptability, qualities I'm now channeling into crafting innovative
+            solutions in the tech realm. However, my insatiable curiosity
+            and love for problem-solving led me to embark on a thrilling new adventure – transitioning
+            from a registered nurse to a software engineer.</p>
+            
+        <p class="about_me_text">I recently completed the intensive 12-week Full Stack Software Engineering program at
+            Hackbright Academy, where I immersed myself in the world of technology. Armed with newfound
+            skills in Python, Flask, SQL, JavaScript, PostgreSQL, and more, I'm excited to bring a fresh
+            perspective and be apart of this coding adventure.</p>
+            
+        <p class="about_me_text">The journey from nursing to software engineering has not only sharpened my technical abilities
+            but has also honed my resilience, adaptability, and dedication. I approach each coding challenge
+            with the same passion and commitment that defined my years in healthcare.</p>
+            
+        <p class="about_me_text">As I step into this vibrant community of problem-solvers and innovators, I am eager to contribute
+            my skills and continue learning and growing on this exciting path.</p>
+
+    </div>
+    </div>
 </div>
 {% endblock %}
