--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,6 @@
 <html>
 <head>
 
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
@@ -13,42 +11,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Hepta+Slab&family=Slabo+13px&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/static/style.css">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light background-image: linear-gradient(to right, #36459cbe, #157e65f0);">
+    
+       
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 
-        <div class="container">
-     
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+            
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
+                        </li>
+            
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/projects">Projects</a>
+                        </li>
+            
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/contact">Contact</a>
+                        </li>
+                    </ul>
 
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="navbar-brand" href="/">Home</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-            </li>
+                </div>
+            </div>
+        </nav>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
-            </li>
+  
 
-            <li class="nav-item active">
-              <a class="nav-link" href="/projects">Projects</a>
-            </li>
 
-            <li class="nav-item active">
-              <a class="nav-link" href="/contact">Contact</a>
-            </li>
-
-          </ul>
-        </div>
-        </div>
-
-      </nav>
 
 
     <title>
@@ -58,5 +62,10 @@
 </head>
 <body>
     {% block body %}{% endblock %}
+    <!-- Include Bootstrap JS files at the end of the body for proper functionality -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
