--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,7 +26,7 @@
         <div class="col-12">
             <div class="contact_linkedin">
                 <i class="bi bi-linkedin"></i>
-                <a class="contact_linkedin" href="https://www.linkedin.com/in/briana-wuthrich-dev/" target="_blank">https://www.linkedin.com/in/briana-wuthrich-dev/</a>
+                <a id="linkedin_link" class="contact_linkedin" href="https://www.linkedin.com/in/briana-wuthrich-dev/" target="_blank">https://www.linkedin.com/in/briana-wuthrich-dev/</a>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="col-12">
             <div class="contact_github">
                 <i class="bi bi-github"></i>
-                <a class="contact_github" href="https://github.com/BWuthrich06" target="_blank">https://github.com/BWuthrich06</a>
+                <a id="github_link" class="contact_github" href="https://github.com/BWuthrich06" target="_blank">https://github.com/BWuthrich06</a>
             </div>
         </div>
     </div>
@@ -44,7 +44,7 @@
         <div class="col-12">
             <div class="contact_resume">
                 <button class="contact_resume">
-                    <a href="static/images/Software Engineer Resume Briana Wuthrich- Google Docs.pdf" target="_blank">View Resume</a>
+                    <a id="resume_button" href="static/images/Software Engineer Resume Briana Wuthrich- Google Docs.pdf" target="_blank">View Resume</a>
                 </button>
             </div>
         </div>
