Added project continuing care

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,3 +1,71 @@
 {% extends 'base.html' %}
 
 {% block title %}Projects{% endblock %}
+
+{% block body %}
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <h1 id="capstone_project_header">Capstone Project</h1>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-7">
+            <h1 id="continuing_care_header">Continuing Care</h1>
+
+                <p id="continuing_care_text">Continuing Care enables individuals to gain more knowledge about their health
+                    and a convenient place to keep saved health information. Users can set up a
+                    personal account and search health conditions or view a page of all health
+                    conditions listed A to Z . Users will be able to view educational resources
+                    on each condition, add condition to personal profile and add/delete personalized
+                    comments to each condition. Users can also search for physicians nearby, add
+                    physician to profile for easy contact information and view location on map.
+                    Users can input their daily vitals to keep a record to bring to their physician.
+                    Additionally, all vitals will be viewable on a graph to observe a visual trend.
+                </p>
+        </div>
+
+        <div class="col-md-5">
+            <iframe id="continuing_care_video" width="560" height="315" src="https://www.youtube.com/embed/wj3K6HyL52I?si=09jo8r31zt7mTCEf&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <button id="continuing_care_button">
+                <a href="https://github.com/BWuthrich06/My_Health_Project" id="continuing_care_link">View Project</a>
+            </button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <h1 id="ongoing_projects">Ongoing Projects</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <h1 id="sport_roster_header">SportRoster</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <p id="sport_roster_text">About text here for SportRoster</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <button id="ongoing_project_button">
+                <a href="https://github.com/BWuthrich06/SportTeamApp" target="_blank">View Project</a>
+            </button>
+        </div>
+    </div>
+
+
+</div>
+{% endblock %}
