--- a/static/style.css
+++ b/static/style.css
@@ -38,7 +38,7 @@ body {
 
 #name {
     color: white;
-    font-size: 175px;
+    font-size: 150px;
     margin-top: 50px;
     margin-bottom: 0;
     display: flex;
@@ -105,10 +105,74 @@ body {
 #about_me_intro {
     padding-top: 200px;
     padding-left: 100px;
-    font-size: 80px;
+    font-size: 100px;
     font-family: 'Ephesis', cursive;
     color: white;
 }
+
+/* Projects */
+#capstone_project_header {
+    color: white;
+    font-family: 'Ephesis', cursive;
+    display: flex;
+    justify-content: center;
+    margin-top: 180px;
+    font-size: 100px;
+}
+
+#continuing_care_header {
+    color: white;
+    font-family: 'Ephesis', cursive;
+    padding-top: 100px;
+    font-size: 60px;
+}
+
+#continuing_care_text {
+    color: white;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 24px;
+    padding-right: 50px;
+    padding-top: 50px;
+}
+
+#continuing_care_video {
+    margin-top: 300px;
+}
+
+#continuing_care_link {
+    color: black;
+}
+
+#continuing_care_button {
+    padding-left: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 20px;
+}
+
+#ongoing_projects {
+    color: white;
+    font-family: 'Ephesis', cursive;
+    padding-top: 100px;
+    font-size: 60px;
+}
+
+#sport_roster_header {
+    color: white;
+    font-family: 'Ephesis', cursive;
+    font-size: 40px;
+}
+
+#ongoing_project_button {
+    padding-left: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 20px;
+}
+
+
+
+
 
 
 /* Contact Page */
@@ -123,7 +187,7 @@ body {
 
 /* Email */
 .contact_email {
-    padding-top: 50px;
+    padding-top: 20px;
     justify-content: center;
     display: flex;
     font-size: 40px;
@@ -133,7 +197,7 @@ body {
 
 #email_link {
     padding-left: 30px;
-    padding-top: 43px;
+    padding-top: 14px;
     color: white;
 }
 
