--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="container">
-    <div class="row">
-        <div class="col-12">
+    <div class="row center-content">
+        <div class="col-12 text-center">
             <h1 id="capstone_project_header">Capstone Project</h1>
         </div>
     </div>
@@ -32,16 +32,16 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12">
+    <div class="row center-content">
+        <div class="col-12 text-center">
             <button id="continuing_care_button">
                 <a href="https://github.com/BWuthrich06/My_Health_Project" id="continuing_care_link">View Project</a>
             </button>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12">
+    <div class="row center-content">
+        <div class="col-12 text-center">
             <h1 id="ongoing_projects">Ongoing Projects</h1>
         </div>
     </div>
@@ -58,10 +58,10 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12">
-            <button id="ongoing_project_button">
-                <a href="https://github.com/BWuthrich06/SportTeamApp" target="_blank">View Project</a>
+    <div class="row center-content">
+        <div class="col-12 text-center">
+            <button id="sport_roster_project_button">
+                <a href="https://github.com/BWuthrich06/SportTeamApp" target="_blank" id="sport_roster_link">View Project</a>
             </button>
         </div>
     </div>
