--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,6 +4,7 @@
 
 {% block body %}
 <div class="container">
+
     <div class="row center-content">
         <div class="col-12 text-center">
             <h1 id="capstone_project_header">Capstone Project</h1>
@@ -12,7 +13,7 @@
 
 
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-12">
             <h1 id="continuing_care_header">Continuing Care</h1>
 
                 <p id="continuing_care_text">Continuing Care enables individuals to gain more knowledge about their health
@@ -26,9 +27,16 @@
                     Additionally, all vitals will be viewable on a graph to observe a visual trend.
                 </p>
         </div>
+    </div>
 
-        <div class="col-md-5">
-            <iframe id="continuing_care_video" width="560" height="315" src="https://www.youtube.com/embed/wj3K6HyL52I?si=09jo8r31zt7mTCEf&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="row">
+        <div class="col-12">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe id="continuing_care_video" width="560" height="315" src="https://www.youtube.com/embed/wj3K6HyL52I?modestbranding=1&rel=0si=09jo8r31zt7mTCEf&amp;start=2"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;
+                web-share" allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
 
@@ -39,6 +47,8 @@
             </button>
         </div>
     </div>
+
+    <hr class="divider">
 
     <div class="row center-content">
         <div class="col-12 text-center">
@@ -65,6 +75,7 @@
             </button>
         </div>
     </div>
+    <br><br><br><br>
 
 
 </div>
