--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Hepta+Slab&family=Slabo+13px&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -25,28 +21,28 @@
     
        
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-            
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
-                        </li>
-            
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/projects">Projects</a>
-                        </li>
-            
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/contact">Contact</a>
-                        </li>
-                    </ul>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+        
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/about_me">About Me<span class="sr-only">(current)</span></a>
+                    </li>
+        
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/projects">Projects</a>
+                    </li>
 
-                </div>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
