--- a/static/style.css
+++ b/static/style.css
@@ -107,7 +107,6 @@ body {
     font-family: 'Cormorant Garamond', serif;
     margin-top: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -128,19 +127,37 @@ body {
 #about_me_head_shot {
    width: 300px;
    height: 425px;
-   margin-top: 300px;
+   padding-top: 20px;
+   margin-top: 305px;
 }
+    
+@media (min-width: 576px) and (max-width: 992px) {
+    #about_me_head_shot {
+        margin-top: 50px; /* Adjust the margin for medium-sized screens */
+    }
+ }
+    
+ @media (max-width: 575px) {
+    #about_me_head_shot {
+        margin-top: 50px; /* Adjust the margin for smaller screens */
+    }
+ }
+
+
 
 .about_me_text {
-    padding-left: 100px;
+    padding-left: 5px;
     font-family: 'Cormorant Garamond', serif;
-    font-size: 25px;
+    font-size: 24px;
     color: white;
+    display: flex;
+    justify-content: center;
 }
 
 #about_me_intro {
-    padding-top: 200px;
-    padding-left: 100px;
+    padding-top: 150px;
+    display: flex;
+    justify-content: center;
     font-size: 100px;
     font-family: 'Ephesis', cursive;
     color: rgb(27, 4, 65);
@@ -153,7 +170,7 @@ body {
     font-family: 'Ephesis', cursive;
     display: flex;
     justify-content: center;
-    margin-top: 180px;
+    margin-top: 150px;
     font-size: 100px;
     font-weight: bold;
 }
@@ -256,10 +273,18 @@ body {
     color: white;
 }
 
+
+@media (max-width: 768px) {
+    .contact_email {
+        font-size: 28px; /* Adjust font size for smaller screens */
+    }
+}
+
 #email_link {
-    padding-left: 30px;
+    padding-left: 20px;
     padding-top: 14px;
     color: white;
+    overflow-wrap: break-word;
 }
 
 /* LinkedIn */
@@ -272,6 +297,12 @@ body {
     color: white;
 }
 
+@media (max-width: 768px) {
+    .contact_linkedin {
+        font-size: 28px; /* Adjust font size for smaller screens */
+    }
+}
+
 #linkedin_link {
     color: white;
 }
@@ -279,7 +310,7 @@ body {
 .bi-linkedin {
     padding-top: 20px;
     color: white;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 /* GitHub */
@@ -293,6 +324,12 @@ body {
     color: white;
 }
 
+@media (max-width: 768px) {
+    .contact_github {
+        font-size: 28px; /* Adjust font size for smaller screens */
+    }
+}
+
 #github_link {
     color: white;
 }
@@ -300,7 +337,7 @@ body {
 .bi-github {
     padding-top: 20px;
     color: white;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 /* Resume */
