--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -6,12 +6,12 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-12 col-lg-4 d-flex justify-content-center">
             <img id="about_me_head_shot" src="static/images/frodo photo, portfolio.jpg" alt="Briana's Headshot">
         </div>
     
 
-    <div class="col-sm-12 col-md-8 col-lg-9">
+    <div class="col-sm-12 col-md-12 col-lg-8 text-center">
 
         <p id="about_me_intro">Hi, I'm Briana!</p>
 
