--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,8 +5,8 @@
 {% block body %}
 <div class="container">
 
-    <div class="row">
-        <div class="col-12">
+    <div class="row center-content">
+        <div class="col-12 text-center">
             <div class="contact_info_header">
                 <h1 class="contact_info_header">Contact Information</h1>
             </div>
@@ -14,8 +14,8 @@
     </div>
     
     <div class="row">
-        <div class="col-12">
-            <div class="contact_email">
+        <div class="col-12 mx-auto">
+            <div class="contact_email text-center">
                 <h6 class="contact_email">Email:</h6>  
                     <a id="email_link" href="mailto:briana.wuthrich@gmail.com">  briana.wuthrich@gmail.com</a></button>
             </div>
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div class="col-12">
-            <div class="contact_linkedin">
+            <div class="contact_linkedin text-center">
                 <i class="bi bi-linkedin"></i>
                 <a id="linkedin_link" class="contact_linkedin" href="https://www.linkedin.com/in/briana-wuthrich-dev/" target="_blank">https://www.linkedin.com/in/briana-wuthrich-dev/</a>
             </div>
