--- a/templates/projects.html
+++ b/templates/projects.html
@@ -41,10 +41,12 @@
     </div>
 
     <div class="row center-content">
-        <div class="col-12 text-center">
-            <button id="continuing_care_button">
-                <a href="https://github.com/BWuthrich06/My_Health_Project" id="continuing_care_link">View Project</a>
-            </button>
+        <div class="col-12 d-flex justify-content-center">
+            <div id="container-cc">
+                <button id="continuing_care_button">
+                    <a href="https://github.com/BWuthrich06/My_Health_Project" target="_blank" id="continuing_care_link">View Project</a>
+                </button>
+            </div>
         </div>
     </div>
 
