--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,17 @@
 body {
-    background-image: linear-gradient(to right, #36459cbe, #157e65f0);
+    background-image: linear-gradient(to right, #2f1c6ebe, #157e65f0);
     padding-top: 56px;
 }
 
 .divider {
     border: none;
     margin: 100px 0;
-    height: 2px;
-    background: linear-gradient(rgb(191, 190, 201), rgb(14, 2, 33), rgb(28, 8, 74));
-    box-shadow: 0 2px 5px rgba(83, 47, 163, 0.8);
+    height: 4px;
+    /* background: linear-gradient(rgb(117, 95, 169), rgb(14, 2, 33), rgb(28, 8, 74)); */
+    box-shadow: 0 2px 8px rgba(19, 5, 60, 0.9);
 }
 
-
+/* background-image: linear-gradient(to right, #36459cbe, #157e65f0); */
 /* Navbar */
 
 .navbar {
@@ -20,7 +20,7 @@ body {
     top: 0;
     text-align: center;
     font-family: 'Cormorant Garamond', serif;
-    background: rgb(75, 67, 75);
+    background: rgb(21, 5, 71);
     z-index: 1000;
   }
 
@@ -114,7 +114,7 @@ body {
     width: 325px;
     height: 400px;
     border-radius: 50%;
-    border: 10px solid rgb(75, 67, 75);
+    border: 7px solid rgb(21, 5, 71);
 }
 
 #about_me_title {
@@ -193,9 +193,10 @@ body {
 }
 
 #continuing_care_video {
-    padding-bottom: 50px;
     display: block;
     margin: 0 auto;
+    border: 5px solid rgb(27, 4, 65);
+    
 }
 
 
@@ -208,6 +209,11 @@ body {
     padding-bottom: 10px;
     padding-top: 10px;
     padding-right: 20px;
+    border: 3px solid rgb(27, 4, 65);
+}
+
+#container-cc {
+    padding-top: 50px;
 }
 
 #ongoing_projects {
@@ -341,18 +347,25 @@ body {
 }
 
 /* Resume */
-.contact_resume {
-    justify-content: center;
-    display: flex;
-    font-size: 20px;
+#contact_resume {
+    font-size: 24px;
     font-family: 'Cormorant Garamond', serif;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0;
+    border-radius: 5px;
+    border: 3px solid rgb(22, 7, 72);
+    color: rgb(22, 7, 72);
 }
 
-#resume_button {
-    font-weight: bold;
-    color: black;
+#contact_resume:hover {
+    color: rgb(16, 140, 154);
 }
+
+
+
+
